simple basic auth introduction

--- a/users/.env-template
+++ b/users/.env-template
@@ -3,8 +3,12 @@ POSTGRES_PASSWORD=awizacje
 POSTGRES_USER=awizacje
 POSTGRES_DB=awizacje
 
+POSTGRES_ADDRESS=db-users
+
 #name for the volume of the users database
 USERS_DB_VOLUME_NAME=db-users
 
 USER_SERVICE_HOST_PORT=54301
 USER_SERVICE_PORT=54301
+
+DB_USERS_HOST_PORT=5432
