--- a/users/docker-compose.yml
+++ b/users/docker-compose.yml
@@ -6,6 +6,8 @@ services:
       POSTGRES_PASSWORD: $POSTGRES_PASSWORD
       POSTGRES_USER: $POSTGRES_USER
       POSTGRES_DB: $POSTGRES_DB
+    ports:
+      - $DB_USERS_HOST_PORT:5432
     volumes:
       - user_repository:/var/lib/postgresql/data
 
