--- a/users/Dockerfile
+++ b/users/Dockerfile
@@ -2,8 +2,11 @@ FROM golang:alpine as builder
 ARG EXPOSED_PORT=$USER_SERVICE_PORT
 EXPOSE ${EXPOSED_PORT}
 WORKDIR /app
-COPY . ./
+COPY go.mod ./
+COPY go.sum ./
 RUN go mod download
+
+COPY . ./
 RUN go build -o ./user-service
 
 FROM alpine
@@ -11,4 +14,4 @@ WORKDIR app
 COPY --from=builder /app/user-service ./user-service
 COPY --from=builder /app/models/migrations ./migrations
 
-CMD ["/user-service"]
+CMD ["/app/user-service"]
